--- a/css/stx_tt.css
+++ b/css/stx_tt.css
@@ -38,14 +38,13 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-.clearfix::after{
+.clearfix::after {
   content: "";
   position: relative;
   display: block;
   width: 100%;
   clear: both;
 }
-
 /* 레이아웃 */
 .wrap {
   display: block;
@@ -184,7 +183,8 @@ body {
   display: block;
   width: 100%;
   height: 910px;
-  background: url("../images/img_visual01_background.png") no-repeat center fixed;
+  background: url("../images/img_visual01_background.png") no-repeat center
+    fixed;
   background-size: cover;
   margin-top: 80px;
 }
@@ -228,16 +228,15 @@ body {
 }
 
 .visual-bt:hover {
-  cursor : pointer
+  cursor: pointer;
 }
 
-
 .visual-txt {
-    font-size: 20px;
-    font-weight: 300;
-    margin-top: 70px;
-    color: #fff;
-  }
+  font-size: 20px;
+  font-weight: 300;
+  margin-top: 70px;
+  color: #fff;
+}
 /* 비주얼 끝 */
 
 /* 뉴스 */
@@ -248,15 +247,14 @@ body {
   padding: 100px 0;
   background-color: #f8f8f8;
 }
-.business-inner{
+.business-inner {
   position: relative;
   display: block;
 }
-.business-top{
+.business-top {
   margin-bottom: 70px;
- 
 }
-.business-title{
+.business-title {
   position: relative;
   display: block;
   font-size: 44px;
@@ -266,7 +264,7 @@ body {
   padding-bottom: 31px;
   /* background-color: aqua; */
 }
-.business-title::after{
+.business-title::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -278,20 +276,20 @@ body {
   height: 4px;
   background-color: #ed1c24;
 }
-.business-desc{
+.business-desc {
   text-align: center;
   margin-top: 30px;
 }
 /* 비지스 하단이미지 */
-.business-bottom{
+.business-bottom {
   position: relative;
   display: block;
 }
-.business-list{
+.business-list {
   position: relative;
   display: block;
 }
-.business-list li{
+.business-list li {
   position: relative;
   display: block;
   width: calc(100% / 5);
@@ -300,41 +298,41 @@ body {
   background-position: 0 0;
   float: left;
 }
-.business-list li:nth-child(1){
+.business-list li:nth-child(1) {
   background-position: calc(240px * 0) 0px;
 }
-.business-list li:nth-child(2){
+.business-list li:nth-child(2) {
   background-position: calc(240px * -1) 0px;
 }
-.business-list li:nth-child(3){
+.business-list li:nth-child(3) {
   background-position: calc(240px * -2) 0px;
 }
-.business-list li:nth-child(4){
+.business-list li:nth-child(4) {
   background-position: calc(240px * -3) 0px;
 }
-.business-list li:nth-child(5){
-  background-position:-960px 0px;
+.business-list li:nth-child(5) {
+  background-position: -960px 0px;
   /* background-position: calc(240px * -4) 0px; */
 }
-.business-list li a{
+.business-list li a {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
-  background-color: rgba(244, 128, 37 , 0);
+  background-color: rgba(244, 128, 37, 0);
   color: #fff;
   text-align: center;
   padding: 100px 0;
   font-size: 24px;
-transition:all 0.5s;
+  transition: all 0.5s;
 }
-.business-list li a:hover{
-  background-color: rgba(244, 128, 37 , 1);
+.business-list li a:hover {
+  background-color: rgba(244, 128, 37, 1);
 }
-.business-list li a::after{
+.business-list li a::after {
   content: "";
   display: block;
-  background:url("../images/bg_common.png");
+  background: url("../images/bg_common.png");
   position: absolute;
   bottom: 90px;
   /* left: calc(50% - 130px / 2); */
@@ -346,33 +344,33 @@ transition:all 0.5s;
   opacity: 0;
   transition: all 0.5s;
 }
-.business-list li a:hover::after{
+.business-list li a:hover::after {
   opacity: 1;
 }
-.business-list li:nth-child(1) a::after{
+.business-list li:nth-child(1) a::after {
   background-position: -168px 0;
 }
-.business-list li:nth-child(2) a::after{
+.business-list li:nth-child(2) a::after {
   background-position: -298px 0;
 }
-.business-list li:nth-child(3) a::after{
+.business-list li:nth-child(3) a::after {
   background-position: 0px -117px;
 }
-.business-list li:nth-child(4) a::after{
+.business-list li:nth-child(4) a::after {
   background-position: -136px -117px;
 }
-.business-list li:nth-child(5) a::after{
+.business-list li:nth-child(5) a::after {
   background-position: -276px -117px;
 }
 /* 뉴스 */
-.news{
+.news {
   position: relative;
   display: block;
   width: 100%;
   background-color: #ed1c24;
   padding: 55px 0px;
 }
-.news-bg{
+.news-bg {
   position: absolute;
   top: 0;
   left: 50%;
@@ -380,106 +378,102 @@ transition:all 0.5s;
   height: 100%;
   background-color: #58595b;
 }
-.news-inner{
+.news-inner {
   position: relative;
   display: block;
- 
 }
-.news-wrap{
+.news-wrap {
   position: relative;
   display: block;
   width: calc(50% - 95px);
 }
-.news-wrap:first-child{
+.news-wrap:first-child {
   float: left;
 }
-.news-wrap:last-child{
+.news-wrap:last-child {
   float: right;
 }
-.news-wrap h3{
+.news-wrap h3 {
   font-size: 32px;
   color: #fff;
   font-weight: 300;
   margin-bottom: 45px;
 }
-.news-content{
+.news-content {
   position: relative;
   display: block;
 }
-.news-list li{
+.news-list li {
   position: relative;
   display: block;
   padding: 25px 0;
-  border-top: 1px solid rgba(255,255,255,0.3);
- 
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
 }
-.news-list li a{
+.news-list li a {
   color: #fff;
   font-size: 16px;
   display: block;
   position: relative;
 }
-.news-list li a .news-txt{
+.news-list li a .news-txt {
   position: relative;
   display: block;
-  
-  /* 말줄임 "..." 표시하는 법 (너비가 꼭 있어야 함) */
-width: 50%;
-white-space: nowrap;
-text-overflow: ellipsis;
-overflow: hidden;
 
-} 
-.news-list li a::after{
+  /* 말줄임 "..." 표시하는 법 (너비가 꼭 있어야 함) */
+  width: 50%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.news-list li a::after {
   content: "";
   position: absolute;
   top: 0;
   right: 0;
   width: 48px;
   height: 23px;
-  background:url("../images/bg_common.png") no-repeat;
-background-position:0px -49px ;
+  background: url("../images/bg_common.png") no-repeat;
+  background-position: 0px -49px;
 }
 /* 뉴스 끝 */
 /* 고객센터 */
-.cs{
+.cs {
   position: relative;
   display: block;
   background-color: #f8f8f8;
- padding: 60px 0;
+  padding: 60px 0;
 }
-.cs-inner{
+.cs-inner {
   position: relative;
   display: block;
-  
+
   /* background-color: #fff; */
 }
-.cs-link{
+.cs-link {
   position: relative;
   display: block;
   /* width: 50%; */
-   width: calc(50% - 1px);
-   height: 200px;
-   padding: 40px 60px;
-   
-   float: left;
-  }
-  .cs-link:first-child{
-   
+  width: calc(50% - 1px);
+  height: 200px;
+  padding: 40px 60px;
+
+  float: left;
+}
+.cs-link:first-child {
   height: 100%;
   /* float: left; */
-  background: url("../images/bg_faq.png")no-repeat #ffffff;
+  background: url("../images/bg_faq.png") no-repeat #ffffff;
   background-position: calc(100% - 50px);
 }
-.cs-link:last-child{
-margin-left: 1px;
+.cs-link:last-child {
+  margin-left: 1px;
   /* float: right; */
   height: 100%;
-  background: url("../images/bg_custom.png")no-repeat #ffffff;
+  background: url("../images/bg_custom.png") no-repeat #ffffff;
   background-position: calc(100% - 50px);
   /* border-left: 2px solid #f8f8f8; */
 }
-.cs-link h3{
+.cs-link h3 {
   position: relative;
   display: block;
   color: #000;
@@ -488,19 +482,19 @@ margin-left: 1px;
   margin-bottom: 20px;
 }
 /* 회사소개 */
-.about{
+.about {
   position: relative;
   display: block;
   padding: 100px 0;
   background-color: #fff;
 }
 
-.about-inner{
+.about-inner {
   position: relative;
   display: block;
 }
 
-.about-top{
+.about-top {
   position: relative;
   display: block;
   background: url("../images/img_about.png") no-repeat;
@@ -508,7 +502,7 @@ margin-left: 1px;
   margin-bottom: 80px;
 }
 
-.about-top > h2{
+.about-top > h2 {
   position: relative;
   display: block;
   font-size: 44px;
@@ -519,7 +513,7 @@ margin-left: 1px;
   text-transform: uppercase;
 }
 
-.about-top > p{
+.about-top > p {
   position: relative;
   display: block;
   font-size: 15px;
@@ -527,7 +521,7 @@ margin-left: 1px;
   padding-bottom: 70px;
 }
 
-.about-top > p > b{
+.about-top > p > b {
   position: relative;
   display: block;
   font-size: 21px;
@@ -536,7 +530,7 @@ margin-left: 1px;
   padding-bottom: 25px;
 }
 
-.about-top > p::before{
+.about-top > p::before {
   content: "";
   position: absolute;
   left: 0;
@@ -548,24 +542,23 @@ margin-left: 1px;
   left: 0;
 }
 /* 아이콘 */
-.about-bottom{
+.about-bottom {
   position: relative;
   display: block;
   text-align: center;
-
 }
-.about-list{
+.about-list {
   position: relative;
   /* display: block; */
   display: inline-block;
   /* background-color: blanchedalmond; */
 }
-.about-list li{
+.about-list li {
   position: relative;
   display: block;
   float: left;
 }
-.about-list li a{
+.about-list li a {
   position: relative;
   /* display: block; */
   display: inline-block;
@@ -573,85 +566,155 @@ margin-left: 1px;
   color: #111;
   font-weight: 500;
 }
-.about-list li a::before{
+.about-list li a::before {
   content: "";
   position: relative;
   display: block;
   width: 110px;
   height: 108px;
-  background: url("../images/bg_icon.png")no-repeat;
+  background: url("../images/bg_icon.png") no-repeat;
   margin-bottom: 25px;
 }
-.about-list li:nth-child(1) a::before{
+.about-list li:nth-child(1) a::before {
   background-position: 0 0;
 }
-.about-list li:nth-child(2) a::before{
+.about-list li:nth-child(2) a::before {
   background-position: -110px 0;
-  
 }
-.about-list li:nth-child(2){
+.about-list li:nth-child(2) {
   /* margin: 0 200px; */
   width: 510px;
-  
+
   /* background-color: #ed1c24;
    */
 }
-.about-list li:nth-child(3) a::before{
+.about-list li:nth-child(3) a::before {
   background-position: -220px 0;
 }
 
 /* 하단 */
-footer{
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 168px;
-    padding: 30px 0;
-    background-color: #4e4e4e;
+footer {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 168px;
+  padding: 30px 0;
+  background-color: #4e4e4e;
 }
 
-.footer-inner{
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    /* background-color: #d8d8d8; */
-    padding-top: 20px;
+.footer-inner {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /* background-color: #d8d8d8; */
+  padding-top: 20px;
 }
 
-.footer-logo{
-    display: block;
-    position: relative;
-    float: left;
+.footer-logo {
+  display: block;
+  position: relative;
+  float: left;
 }
 
-.footer-info{
-    display: block;
-    position: relative;
-    float: left;
-    padding-left: 135px;
+.footer-info {
+  display: block;
+  position: relative;
+  float: left;
+  padding-left: 135px;
 }
 
-.footer-list li{
-    display: block;
-    position: relative;
-    padding: 4px 0;
-    color: #c3c3c3;
-    font-size: 13px;
-    font-weight: 400;
+.footer-list li {
+  display: block;
+  position: relative;
+  padding: 4px 0;
+  color: #c3c3c3;
+  font-size: 13px;
+  font-weight: 400;
 }
 
-.footer-list li address{
-    /* address 하면 기울어지기 때문에, 스타일 normal로 똑바로 세운다. */
-    font-style: normal;
+.footer-list li address {
+  /* address 하면 기울어지기 때문에, 스타일 normal로 똑바로 세운다. */
+  font-style: normal;
 }
 
 /* top 버튼 */
-.top-button{
+.top-button {
   position: fixed;
-  bottom: 0px;
-  right: 0px;
-  width: 82px;
-  height: 210px;
-  z-index: 999;
+  right: 30px;
+  bottom: 60px;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  /* 세로 정렬 */
+  align-items: center;
+  gap: 10px;
+}
+
+.top-button .chat-btn span {
+  position: absolute;
+  top: 30px;
+  right: 80px;
+  width: 180px;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 23px;
+  padding: 5px 10px;
+  box-shadow: 0px 3px 7px 0 rgb(0, 0, 0, 0.3);
+  letter-spacing: 0.5px;
+  display: none;
+}
+
+.top-button .chat-btn:hover span {
+  display: block;
+}
+
+.top-button .chat-btn {
+  animation: updown 1.5s infinite;
+  -webkit-animation: updown 1.5s infinite;
+}
+
+.top-button .shop-btn {
+  position: relative;
+  display: block;
+  width: 55px;
+  line-height: 55px;
+  background-color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  box-shadow: 0px 3px 7px 0 rgba(0, 0, 0, 0.3);
+  letter-spacing: 0.5px;
+}
+
+.top-button .top-btn {
+  background-color: #ed1c24;
+  width: 55px;
+  border-radius: 50%;
+  line-height: 55px;
+  text-align: center;
+}
+
+.top-button .top-btn img {
+  transform: rotate(180deg);
+}
+
+.top-button .top-btn img .up {
+  transform: rotate(0deg);
+}
+
+/* .chat-btn 애니메이션 효과 */
+@keyframes updown {
+  0% {
+    transform: translatey(0);
+  }
+
+  50% {
+    transform: translatey(-10%);
+  }
+
+  100% {
+    transform: translatey(0);
+  }
 }
