--- a/css/stx_tt.css
+++ b/css/stx_tt.css
@@ -45,6 +45,138 @@ body {
   width: 100%;
   clear: both;
 }
+
+/* 안내창(모달창) */
+
+body.active {
+  overflow-y: auto;
+}
+
+.modal-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 99999;
+}
+
+.modal-mian {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  background-color: #fff;
+  width: 600px;
+  height: 500px;
+  border-radius: 50px;
+  text-align: center;
+  line-height: 45px;
+  /* overflow: hidden; */
+  /* width: 600px;
+  height: 500px;
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50px;
+  text-align: center;
+  padding: 140px 0; */
+}
+
+.modal-mian .modal-logo {
+  position: absolute;
+  top: -80px;
+  left: 50%;
+  transform: translatex(-50%);
+  display: block;
+  width: 150px;
+  height: 150px;
+  border: 8px solid #859fc7;
+  border-radius: 50%;
+  /* background: url("../images/chat-btn.png") no-repeat center #fff; */
+  background: url("../images/totoro.png") no-repeat center #fff;
+  background-size: contain;
+}
+
+.modal-nonotic {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 45px;
+}
+
+.modal-nonotic span {
+  font-size: 15px;
+}
+
+.modal-nonotic strong {
+  color: red;
+  font-weight: 600;
+  background: linear-gradient(to top, yellow 50%, transparent 40%);
+}
+
+.modal-close {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 5px 0;
+  width: 100%;
+  font-weight: 300;
+  background-color: #eee;
+  border-radius: 0 0 45px 45px;
+}
+
+/* .modal-nonotic {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 45px;
+}
+
+.modal-nonotic span {
+  font-size: 15px;
+}
+
+.modal-nonotic strong {
+  position: relative;
+  color: red;
+  font-weight: 600;
+  /* background-color: rgba(255, 255, 146); 
+}
+
+/* 아래 짧은 강조선 추가, after/before 
+.modal-nonotic strong::before {
+  content: "";
+  position: absolute;
+  top: 22px;
+  right: 0;
+  width: 75px;
+  height: 10px;
+  background-color: rgba(255, 251, 0, 0.5);
+}
+
+.modal-close {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 15px 0;
+  width: 100%;
+  font-weight: 300;
+  background-color: #eee;
+  border-radius: 0 0 45px 45px;
+}
+
+.modal-close i {
+  font-weight: 200;
+} */
+
 /* 레이아웃 */
 .wrap {
   display: block;
@@ -58,7 +190,7 @@ body {
   top: 0;
   left: 0;
   overflow: hidden;
-  z-index: 9999;
+  z-index: 9000;
   transition: all 0.5s;
 }
 .header:hover {
@@ -702,7 +834,7 @@ footer {
 
 /* 이미지의 위 아래 버튼을 적용하기 위해서 사용. = .up , 띄어쓰기x*/
 .top-button .top-btn img.up {
-  transform: rotate(45deg);
+  transform: rotate(0deg);
 }
 
 /* .chat-btn 애니메이션 효과 */
